--- a/src/main/resources/templates/customer/feedback.html
+++ b/src/main/resources/templates/customer/feedback.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appraisal agency</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/feedback.css">
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="/resources/static/css/styles.css">
+    <link rel="stylesheet" href="/resources/static/css/feedback.css">
+    <script src="/resources/static/js/script.js" defer></script>
 </head>
 <body>
 <div class="content">
@@ -81,20 +81,20 @@
                     <h2 class="title">CONTACTS</h2>
                     <ul id="contacts">
                         <li>
-                            <img src="/assets/phone_icon.png" alt="phone" class="contacts-imgs">
+                            <img src="/resources/static/assets/phone_icon.png" alt="phone" class="contacts-imgs">
                             <span>+375 44 798 70 77 </span>
                         </li>
                         <li>
-                            <img src="/assets/emai_icon.png" alt="e-mail" class="contacts-imgs">
+                            <img src="/resources/static/assets/emai_icon.png" alt="e-mail" class="contacts-imgs">
                             <span>aleks.krutsko@gmail.com</span>
                         </li>
                         <li>
-                            <img src="/assets/telegram_icon.png" alt="telegram" class="contacts-imgs">
+                            <img src="/resources/static/assets/telegram_icon.png" alt="telegram" class="contacts-imgs">
                             <span>@Alexei_kr</span>
                         </li>
                     </ul>
                 </div>
-                <a href="/">
+                <a href="/logout">
                     <button type="submit" class="animated-button">
                         Выйти
                     </button>
