--- a/src/main/resources/static/css/tabs.css
+++ b/src/main/resources/static/css/tabs.css
@@ -31,7 +31,8 @@ body {
     display: none;
     border: 1px solid #e0e0e0;
     padding: 10px 15px;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 /* отобразить контент, связанный с вабранной радиокнопкой (input type="radio") */
