--- a/src/main/resources/templates/admin/personalInfo.html
+++ b/src/main/resources/templates/admin/personalInfo.html
@@ -10,6 +10,10 @@
     <style>
         body{
             overflow: hidden;
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
         }
          .error{
              background-color: #fffcfc;
