--- a/src/main/resources/templates/admin/profile.html
+++ b/src/main/resources/templates/admin/profile.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="/resources/static/css/styles.css">
     <script src="/resources/static/js/script.js" defer></script>
     <style>
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+        }
         .error{
             background-color: #fffcfc;
             position: absolute;
@@ -19,6 +25,8 @@
         }
         .filter{
             padding-top: 20px;
+            color: white;
+            font-size: 24px;
         }
         #one{
             width: 1080px;
