--- a/src/main/resources/templates/admin/statistic.html
+++ b/src/main/resources/templates/admin/statistic.html
@@ -45,6 +45,13 @@
         }
     </script>
     <style>
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+            overflow: hidden;
+        }
         h4{
             font-family: 'Lexend', sans-serif;
             font-size: 15px;
@@ -60,14 +67,14 @@
         .div{
             margin-left: 500px;
         }
-        body{
-            overflow: hidden;
-        }
         .animated-button1{
             margin-left: 1500px;
         }
         .menu-item{
             margin-top: 35px;
+        }
+        #chart_div{
+            margin-top: 50px;
         }
     </style>
 </head>
