--- a/src/main/resources/templates/appraiser/method.html
+++ b/src/main/resources/templates/appraiser/method.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="/resources/static/css/tabs.css">
     <script src="/resources/static/js/script.js" defer></script>
     <style>
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo2.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+        }
+        .tabs{
+            backdrop-filter: blur(8px);
+        }
         textarea{
             max-width: 300px;
         }
