--- a/src/main/resources/templates/customer/feedback.html
+++ b/src/main/resources/templates/customer/feedback.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="/resources/static/css/styles.css">
     <link rel="stylesheet" href="/resources/static/css/feedback.css">
     <script src="/resources/static/js/script.js" defer></script>
+    <style>
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
 <div class="content">
