--- a/src/main/resources/templates/customer/newContract.html
+++ b/src/main/resources/templates/customer/newContract.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="/resources/static/css/styles.css">
     <script src="/resources/static/js/script.js" defer></script>
     <style>
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+        }
+        .input{
+            margin: 1rem 0;
+        }
         .error{
             background-color: #fffcfc;
             position: absolute;
