--- a/src/main/resources/static/css/auths.css
+++ b/src/main/resources/static/css/auths.css
@@ -5,9 +5,8 @@
     font-family: 'Rubik', sans-serif;
 }
 body{
-    background:url("../assets/background.jpg");
     background-size: cover;
-    background-repeat: no-repeat;
+    background: url("../assets/background.jpg") no-repeat;
 }
 
 input{
