--- a/src/main/resources/templates/customer/statistic.html
+++ b/src/main/resources/templates/customer/statistic.html
@@ -52,9 +52,19 @@
         // chart.draw(view, options);
     </script>
     <style>
-    div{
-        margin-left: 120px;
-    }
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+            overflow: hidden;
+        }
+        div{
+            margin-left: 120px;
+        }
+        #chart_div{
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
