--- a/src/main/resources/templates/customer/viewSearch.html
+++ b/src/main/resources/templates/customer/viewSearch.html
@@ -7,6 +7,14 @@
     <title>Appraisal agency</title>
     <link rel="stylesheet" href="/resources/static/css/styles.css">
     <script src="/resources/static/js/script.js" defer></script>
+    <style>
+        body{
+            background-size: cover;
+            background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+            background-size: 100%;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
 
