--- a/src/main/resources/templates/customer/profile.html
+++ b/src/main/resources/templates/customer/profile.html
@@ -11,7 +11,6 @@
         body{
             background-size: cover;
             background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
-            background-size: 100%;
             font-size: 18px;
         }
         .error{
@@ -51,7 +50,7 @@
                                     <td th:text="${contract.objectToAppraise.description}"></td>
                                     <td th:text="${contract.expectedPrice}"></td>
                                     <td th:text="${contract.appraiserPrice}"></td>
-                                    <td th:text="${contract.appraiser.user.login}"></td>
+                                    <td th:text="${contract.appraiser != null} ? ${contract.appraiser.user.login} :''"></td>
                                     <td th:text="${contract.strStatus}"></td>
                                     <td><button class="btn"><a th:href = "@{/customer/sign/{id} (id=${contract.id})}">Подписать</a></button></td>
                                     <td><button class="btn"><a th:href = "@{/customer/terminate/{id} (id=${contract.id})}">Расторгнуть</a></button></td>
