--- a/src/main/resources/templates/appraiser/objectsToAppraise.html
+++ b/src/main/resources/templates/appraiser/objectsToAppraise.html
@@ -11,7 +11,7 @@
 <style>
     body{
         background-size: cover;
-        background: url("/../../../resources/static/assets/background_personalInfo.jpg") no-repeat;
+        background: url("/../../../resources/static/assets/background1.jpg") no-repeat;
         font-size: 18px;
     }
     table{
@@ -24,7 +24,7 @@
     margin-top: 20px;
     }
     .transform{
-        background: url("/../../../resources/static/assets/background_personalInfo2.jpg") no-repeat;
+        background: url("/../../../resources/static/assets/background2.jpg") no-repeat;
     }
     .error{
         background-color: #fffcfc;
@@ -63,14 +63,14 @@
                         <tr>
                             <th>ID</th>
                             <th>Название</th>
-                            <th>Удалить</th>
+                            <th></th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:each = "objectType : ${objectsTypes}">
                             <td th:text="${objectType.id}"></td>
                             <td th:text="${objectType.type}"></td>
-                            <td><button class="btn"><a th:href = "@{/appraiser/deleteType/{id} (id=${objectType.id})}">Удалить</a></button></td>
+                            <td><a th:href = "@{/appraiser/deleteType/{id} (id=${objectType.id})}">Удалить</a></td>
                         </tr>
                         </tbody>
                     </table>
@@ -124,7 +124,7 @@
                             <th>ID</th>
                             <th>Название</th>
                             <th>Описание</th>
-                            <th>Удалить</th>
+                            <th></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -132,7 +132,7 @@
                             <td th:text="${objectToAppraise.id}"></td>
                             <td th:text="${objectToAppraise.objectType.type}"></td>
                             <td th:text="${objectToAppraise.description}"></td>
-                            <td><button class="btn"><a th:href = "@{/appraiser/deleteObject/{id} (id=${objectToAppraise.id})}">Удалить</a></button></td>
+                            <td><a th:href = "@{/appraiser/deleteObject/{id} (id=${objectToAppraise.id})}">Удалить</a></td>
                         </tr>
                         </tbody>
                     </table>
@@ -185,9 +185,7 @@
     <div class="navbar">
         <div class="navbar-panel">
             <button class="close-menu">
-                <svg  width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 1L21 21M1 21L21 1" stroke="black"/>
-                </svg>
+                <img class="menu-img" src="/resources/static/assets/close-btn.svg">
             </button>
 
             <nav class="navbar-menu">
@@ -241,12 +239,7 @@
             </nav>
         </div>
         <button class="menu-button">
-            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.937476 9.37501H29.0624C29.58 9.37501 29.9999 8.95498 29.9999 8.43754C29.9999 7.92002 29.5799 7.50006 29.0624 7.50006H0.937476C0.419955 7.50006 0 7.92009 0 8.43754C0 8.95498 0.420033 9.37501 0.937476 9.37501Z" fill="black"/>
-                <path d="M29.0624 14.0626H0.937476C0.419955 14.0626 0 14.4826 0 15C0 15.5175 0.420033 15.9375 0.937476 15.9375H29.0624C29.58 15.9375 29.9999 15.5175 29.9999 15C29.9999 14.4826 29.58 14.0626 29.0624 14.0626Z" fill="black"/>
-                <path d="M29.0625 20.625H10.3125C9.79495 20.625 9.375 21.0451 9.375 21.5625C9.375 22.08 9.79503 22.5 10.3125 22.5H29.0625C29.58 22.5 29.9999 22.0799 29.9999 21.5625C30 21.045 29.58 20.625 29.0625 20.625Z" fill="black"/>
-            </svg>
-
+            <img class="menu-img" src="/resources/static/assets/burger.svg">
         </button>
     </div>
 <script>
