--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -330,8 +330,8 @@ button{
     margin: 10px 80px;
     padding: 15px 30px;
     overflow: hidden;
-    border: 2px solid;
-    border-bottom-width: 4px;
+    border: 2px solid #454af5;
+    border-radius: 5px;
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     font-weight: bold;
